Inicializando novo repositório

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
 <main>
     <section class="main-section pad-70">
         <div class="headline">
-            <span>KIPPER CONSULTORIA</span>
+            <span>IMPACTECH CONSULTORIA</span>
             <h1>A consultoria que você busca para seu software</h1>
         </div>
-        <img ngSrc="/assets/principal.png" width="669" height="536">
+        <img ngSrc="/assets/principal.png" width="900" height="536">
     </section>
     <section class="benefit-section pad-70">
         <div class="benefit-data">
