--- a/src/color-variables.scss
+++ b/src/color-variables.scss
@@ -1,6 +1,6 @@
 $primary-text: #0F172A;
 $secondary-text: #475569;
-$primary-color: #8455FF;
-$secondary-color: #5222D0;
-$light-primary-color: #B79FF7;
-$bg-secondary: #351686;
+$primary-color: #d0e6a5;
+$secondary-color: #95C930;
+$light-primary-color: #95C930;
+$bg-secondary: #d0e6a5;
